--- a/index.html
+++ b/index.html
@@ -20,10 +20,20 @@
             height: 100%;
             object-fit: cover;
         }
+        #fullscreen-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: rgba(255, 255, 255, 0.5);
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <video id="video" autoplay></video>
+    <button id="fullscreen-button">Go Fullscreen</button>
     <script src="script.js"></script>
 </body>
 </html>
