--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     </style>
 </head>
 <body>
-    <video id="video" autoplay></video>
     <button id="fullscreen-button">Go Fullscreen</button>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/ar.js/aframe/build/aframe-ar.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
