--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camera Access</title>
+    <title>AR Circle</title>
     <style>
         body, html {
             margin: 0;
@@ -15,11 +15,6 @@
             align-items: center;
             background-color: #000;
         }
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
         #fullscreen-button {
             position: absolute;
             top: 10px;
@@ -29,13 +24,39 @@
             padding: 10px;
             cursor: pointer;
         }
+        a-scene {
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
     <button id="fullscreen-button">Go Fullscreen</button>
+    <a-scene embedded arjs>
+        <a-entity geometry="primitive: circle; radius: 0.5" material="color: blue; opacity: 0.5" position="0 0.5 0"></a-entity>
+        <a-marker-camera preset='hiro'></a-marker-camera>
+    </a-scene>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/ar.js/aframe/build/aframe-ar.js"></script>
-    <script src="script.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const fullscreenButton = document.getElementById('fullscreen-button');
+
+            function goFullscreen() {
+                const elem = document.documentElement;
+                if (elem.requestFullscreen) {
+                    elem.requestFullscreen();
+                } else if (elem.mozRequestFullScreen) { // Firefox
+                    elem.mozRequestFullScreen();
+                } else if (elem.webkitRequestFullscreen) { // Chrome, Safari and Opera
+                    elem.webkitRequestFullscreen();
+                } else if (elem.msRequestFullscreen) { // IE/Edge
+                    elem.msRequestFullscreen();
+                }
+            }
+
+            fullscreenButton.addEventListener('click', goFullscreen);
+        });
+    </script>
 </body>
 </html>
-
