--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR Circle</title>
+    <title>AR Experience</title>
     <style>
         body, html {
             margin: 0;
@@ -33,7 +33,9 @@
 <body>
     <button id="fullscreen-button">Go Fullscreen</button>
     <a-scene embedded arjs>
-        <a-entity geometry="primitive: circle; radius: 0.5" material="color: blue; opacity: 0.5" position="0 0.5 0"></a-entity>
+        <!-- AR content (e.g., a basic box) -->
+        <a-box position="0 0.5 0" material="color: red; opacity: 0.5;"></a-box>
+        <!-- Marker for AR -->
         <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
