--- a/index.html
+++ b/index.html
@@ -20,15 +20,6 @@
             align-items: center;
             background-color: #000;
         }
-        #fullscreen-button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background-color: rgba(255, 255, 255, 0.5);
-            border: none;
-            padding: 10px;
-            cursor: pointer;
-        }
         a-scene {
             width: 100%;
             height: 100%;
@@ -36,33 +27,27 @@
     </style>
 </head>
 <body>
-    <button id="fullscreen-button">Go Fullscreen</button>
     <a-scene embedded arjs>
         <!-- AR content (e.g., a basic box) -->
-        <a-box position="0 0.5 0" material="color: red; opacity: 0.5;"></a-box>
+        <a-box position="0 0.5 0" material="color: red;"></a-box>
         <!-- Marker for AR -->
         <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>
 
     <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const fullscreenButton = document.getElementById('fullscreen-button');
+        // JavaScript code to handle interactions or animations
+        document.addEventListener('DOMContentLoaded', function() {
+            const scene = document.querySelector('a-scene');
+            const box = document.querySelector('a-box');
 
-            function goFullscreen() {
-                const elem = document.documentElement;
-                if (elem.requestFullscreen) {
-                    elem.requestFullscreen();
-                } else if (elem.mozRequestFullScreen) { // Firefox
-                    elem.mozRequestFullScreen();
-                } else if (elem.webkitRequestFullscreen) { // Chrome, Safari and Opera
-                    elem.webkitRequestFullscreen();
-                } else if (elem.msRequestFullscreen) { // IE/Edge
-                    elem.msRequestFullscreen();
-                }
-            }
-
-            fullscreenButton.addEventListener('click', goFullscreen);
+            // Example: Change box color on click
+            box.addEventListener('click', function() {
+                const colors = ['red', 'green', 'blue'];
+                const randomColor = colors[Math.floor(Math.random() * colors.length)];
+                box.setAttribute('material', 'color', randomColor);
+            });
         });
     </script>
 </body>
 </html>
+
