--- a/index.html
+++ b/index.html
@@ -32,20 +32,21 @@
 <body>
     <!-- A-Frame scene with AR.js attributes -->
     <a-scene embedded arjs>
-        <!-- AR content (e.g., a red box) -->
-        <a-box position="0 0.5 0" material="color: red;"></a-box>
+        <!-- Camera for AR -->
+        <a-entity camera></a-entity>
         
         <!-- Marker for AR (Hiro marker) -->
         <a-marker preset="hiro">
-            <!-- Content to display when marker is detected -->
+            <!-- AR content to display when marker is detected -->
             <a-box position="0 0.5 0" material="color: red;"></a-box>
         </a-marker>
 
-        <!-- Camera for AR -->
-        <a-entity camera></a-entity>
+        <!-- Optional: Lights for better marker detection -->
+        <a-light type="ambient" intensity="0.5"></a-light>
+        <a-light type="point" intensity="1" position="2 4 4"></a-light>
     </a-scene>
 
-    <!-- JavaScript for interactions -->
+    <!-- Optional: JavaScript for interactions -->
     <script>
         // Optional JavaScript for interactions or animations
         document.addEventListener('DOMContentLoaded', function() {
@@ -60,5 +61,3 @@
     </script>
 </body>
 </html>
-
-
